--- a/style/style.css
+++ b/style/style.css
@@ -17,3 +17,10 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline; }
+
+#hero #hero-nav nav {
+  display: inline-block; }
+  #hero #hero-nav nav #nav-links li {
+    display: inline-block; }
+
+/*# sourceMappingURL=style.css.map */
